minikube_db_local/resources/election-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: election-v2
  namespace: dev
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: election
      version: v2
  template:
    metadata:
      labels:
        app: election
        version: v2
    spec:
      containers:
      - name: election-v2
        image: garystafford/spring-postgresql-demo:2.0.0
        ports:
        - containerPort: 8080
      restartPolicy: Always
