minikube_db_local/resources/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  labels:
    istio-injection: enabled
    app: postgres
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        istio-injection: enabled
        app: postgres
    spec:
      containers:
      - image: postgres:10.3-alpine
        name: postgres
        ports:
        - containerPort: 5432
      restartPolicy: Always
status: {}
