minikube_db_local/resources/election-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: election
  labels:
    app: election
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: election
  type: NodePort
