minikube_db_local/resources/ingress-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev-ingress
  labels:
    name: dev-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /.*
        backend:
          serviceName: election
          servicePort: 8080
